avoid double encoding